// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control deve renderizar corretamente 1`] = `
<div
  className="control"
/>
`;

exports[`Control deve renderizar o ícone 1`] = `
<div
  className="control has-icon"
>
  <span
    className="icon"
  >
    <Icon
      icon="login"
    />
  </span>
</div>
`;

exports[`Control deve renderizar o ícone na direita 1`] = `
<div
  className="control has-icon has-icon-right"
>
  <span
    className="icon"
  >
    <Icon
      icon="login"
    />
  </span>
</div>
`;

exports[`Control deve renderizar os filhos 1`] = `
<div
  className="control"
>
  <Input
    type="text"
  />
</div>
`;
